Fri Dec  6 11:51:28 2013  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/erb.rb: [DOC] fix broken link, Use rubygems.org and www.ruby-toolbox.com instead of RAA.
	  [Bug #9197]

Fri Dec  6 10:50:54 2013  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/webrick/httprequest.rb: [DOC] Fix broken link of CGI specification by @udzura [fix GH-466]

Thu Dec  6 01:27:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (GetVpValueWithPrec):
	  treat 0.0 and -0.0 of floating-point numbers specially for an optimization
	  and to correctly propagate its signbit to the result.
	  [Bug #9214] [ruby-core:58858]

	* test/bigdecimal/test_bigdecimal.rb: add tests case for the above change.

	* test/bigdecimal/test_bigdecimal_util.rb: ditto.

Thu Dec  5 22:18:01 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (configuration): strip destdir part from prefix to get
	  rid of duplication.  a patch by arton at [ruby-core:58859].
	  [ruby-core:58856] [Bug #9213]

Thu Dec  5 21:53:29 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_or): lhs elements are prefered, so should not
	  replace with rhs elements.

	* test/ruby/test_array.rb (test_OR_in_order): import the test failed
	  by r43969 from rubyspec/core/array/union_spec.rb.

Thu Dec  5 21:05:42 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_info_decode): fix to avoid syntax error on VS2012.

Thu Dec  5 19:35:35 2013  Martin Duerst <duerst@it.aoyama.ac.jp>

	* st.c: tweaked comment

Thu Dec  5 19:21:10 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c (struct rb_objspace): rename internal last_collection_flags to
	  latest_gc_info
	* gc.c (gc_latest_collection_info): add GC.latest_gc_info() with similar
	  behavior to GC.stat()
	* gc.c (rb_gc_latest_gc_info): new c-api for above
	* gc.c (gc_stat_internal): remove :last_collection_flags from GC.stat
	* gc.c (gc_profile_decode_flags): remove GC::Profiler.decode_flags
	* include/ruby/intern.h (rb_gc_latest_gc_info): export new c-api